--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio-tungstenite = "*"
 serde_json = "*"
 futures-util = "*"
 once_cell = "*"
+lazy_static = "*"
 
 [dependencies.mongodb]
 version = "2.0.0-beta.3"
