lower build time by removing unused tokio features
Signed-off-by: Splatterxl <splatterxl@outlook.ie>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ features = ['sync']
 
 [dependencies.tokio]
 version = "*"
-features = ["full"]
+features = ["net"]
 
 [dependencies.serde]
 version = "*"
