--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ publish = false
 tokio-tungstenite = "*"
 serde_json = "*"
 futures-util = "*"
-once_cell = "*"
 lazy_static = "*"
+rocket = "0.5.0-rc.1"
 
 [dependencies.mongodb]
 version = "2.0.0-beta.3"
