--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0"
 futures-util = "0.3"
 lazy_static = "1.4"
 rocket = "0.5.0-rc.1"
+colorful = "0.2"
 
 [dependencies.mongodb]
 version = "2.0.0-beta.3"
@@ -25,3 +26,7 @@ features = ["net"]
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
+
+[dependencies.ctrlc]
+version = "3.0"
+features = ["termination"]
