--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -29,6 +29,7 @@ jobs:
         run: cargo fmt
       - name: Commit
         run: |
+          git pull
           git config --local user.name "github-actions[bot]"
           git config --local user.email "actions@github.com"
           git add .
