--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,12 @@ tokio-tungstenite = "0.15"
 serde_json = "1.0"
 futures-util = "0.3"
 lazy_static = "1.4"
-rocket = "0.5.0-rc.1"
 colorful = "0.2"
+
+[dependencies.rocket]
+version = "0.5.0-rc.1"
+default-features = false
+features = ["json"]
 
 [dependencies.mongodb]
 version = "2.0.0-beta.3"
