--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,9 +11,10 @@ jobs:
       - run: rm -rf Cargo.lock
       - name: Run Clippy
         # set MONGO environment variable so env!() doesn't fail
-        run: MONGO= cargo clippy
+        run: MONGO=aaaaaaaaaa cargo clippy
       - name: Commit Changed Files
         run: |
+          git pull
           git add .
           git config --local user.name "github-actions[bot]"
           git config --local user.email "actions@github.com"
