--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ default-features = false
 features = ["json"]
 
 [dependencies.mongodb]
-version = "2.0.0-beta.3"
+version = "2.0"
 default-features = false
 features = ['sync']
 
