--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "discharged"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2018"
 publish = false
 
@@ -12,6 +12,10 @@ serde_json = "1.0"
 futures-util = "0.3"
 lazy_static = "1.4"
 colorful = "0.2"
+
+[dependencies.rand]
+version = "*"
+default-features = false
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
