--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.0.1"
 edition = "2018"
 publish = false
 
+[profile.release]
+lto = 'fat'
+debug = false
+opt-level = 3
+panic = 'abort'
+codegen-units = 1
+overflow-checks = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
